--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@ async function tester() {
   const message = document.getElementById("msg").value.trim();
   if (!message) return alert("Écris un message");
 
-  const res = await fetch(WEBHOOK_URL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ message })
-  });
+  const url = WEBHOOK_URL + "?message=" + encodeURIComponent(message);
+
+const res = await fetch(url, {
+  method: "GET"
+});
+
 
   const data = await res.json();
 
