--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="resultat" class="box" style="display:none;">
   <div><span class="label">Intent :</span> <span id="intent"></span></div>
   <div><span class="label">Urgence :</span> <span id="urgency"></span></div>
-  <div><span class="label">Escalade humaine :</span> <span id="need_human"></span></div>
+  <div><span class="label">Intervention humaine recquise :</span> <span id="need_human"></span></div>
   <div class="label">Réponse proposée :</div>
   <pre id="reply"></pre>
 </div>
